Implemented CreateAnnotations handler
