# internal/app/crowd/api/v1/annotation.go
@@ -1,0 +1,7 @@
+package crowdapiv1
+
+type AnnotationOutputDataDTO struct {
+	Type  string `json:"type"`
+	Name  string `json:"name"`
+	Value string `json:"value"`
+}
