# internal/pb/crowd-api-v1/crowd.api.v1.pb.gw.go
@@ -259,7 +259,7 @@ func RegisterCrowdAPIV1HandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/crowd.api.v1.CrowdAPIV1/CreateAnnotations", runtime.WithHTTPPathPattern("/crowd.api.v1.CrowdAPIV1/CreateAnnotations"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/crowd.api.v1.CrowdAPIV1/CreateAnnotations", runtime.WithHTTPPathPattern("/api/v1/annotations"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -385,7 +385,7 @@ func RegisterCrowdAPIV1HandlerClient(ctx context.Context, mux *runtime.ServeMux,
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/crowd.api.v1.CrowdAPIV1/CreateAnnotations", runtime.WithHTTPPathPattern("/crowd.api.v1.CrowdAPIV1/CreateAnnotations"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/crowd.api.v1.CrowdAPIV1/CreateAnnotations", runtime.WithHTTPPathPattern("/api/v1/annotations"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -406,7 +406,7 @@ var (
 	pattern_CrowdAPIV1_CreateProject_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "projects"}, ""))
 	pattern_CrowdAPIV1_ListProjects_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "projects", "list"}, ""))
 	pattern_CrowdAPIV1_GetProject_0            = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "projects", "id"}, ""))
-	pattern_CrowdAPIV1_CreateAnnotations_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"crowd.api.v1.CrowdAPIV1", "CreateAnnotations"}, ""))
+	pattern_CrowdAPIV1_CreateAnnotations_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "annotations"}, ""))
 )
 
 var (
